<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.adriantache.ikigai.randomizer.RandomizerViewModel"
            />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/love_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/what_you_love"
            app:layout_constraintBottom_toTopOf="@+id/good_til"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/love_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:text="@{viewModel.loveChoice}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/good_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/what_youre_good_at"
            app:layout_constraintBottom_toTopOf="@id/world_til"
            app:layout_constraintTop_toBottomOf="@id/love_til"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/good_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:text="@{viewModel.goodChoice}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/world_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/what_world_needs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/good_til"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/world_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:text="@{viewModel.worldChoice}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/randomize_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/randomize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/world_til"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
